[gd_scene load_steps=8 format=2]

[ext_resource path="res://gfx/fonts/spelunkid_font.tres" type="BitmapFont" id=1]
[ext_resource path="res://gfx/fonts/spelunkid_font_bold.tres" type="BitmapFont" id=2]
[ext_resource path="res://ui/FlatButton.theme" type="Theme" id=3]
[ext_resource path="res://ui/FileDialog.theme" type="Theme" id=4]
[ext_resource path="res://ui/main/voice/WaveformBanksTab.gd" type="Script" id=5]
[ext_resource path="res://gfx/ui/godot_icons/Add.svg" type="Texture" id=7]
[ext_resource path="res://gfx/ui/godot_icons/Sub.svg" type="Texture" id=8]

[node name="Waveform" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 19.0
margin_right = -760.0
margin_bottom = -376.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="ItemList" parent="."]
margin_left = 7.0
margin_top = 5.0
margin_right = 183.0
margin_bottom = 170.0
theme = ExtResource( 4 )
allow_reselect = true
fixed_icon_size = Vector2( 64, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -71.0
margin_top = 13.0
margin_right = -7.0
margin_bottom = 41.0
hint_tooltip = "Adds an operator to the wiring grid."
theme = ExtResource( 3 )
text = "Add "
icon = ExtResource( 7 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remove" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -71.0
margin_top = 45.0
margin_right = -7.0
margin_bottom = 73.0
hint_tooltip = "Removes an operator from the wiring grid."
theme = ExtResource( 3 )
disabled = true
text = "Del "
icon = ExtResource( 8 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 141.0
margin_right = -8.0
margin_bottom = 169.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Edit="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Disabled" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.815686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Disabled"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
custom_fonts/font = ExtResource( 1 )
text = "(Waveform dialog open.
Close dialog to continue=)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_activated" from="Items" to="." method="_on_Items_item_activated"]
[connection signal="item_selected" from="Items" to="." method="_on_Items_item_selected"]
[connection signal="nothing_selected" from="Items" to="." method="_on_Items_nothing_selected"]
[connection signal="pressed" from="Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="Edit" to="." method="_on_Edit_pressed"]
